--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,18 @@ a {
   color: inherit;
 }
 
+ul {
+  list-style: none;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 10px;
+}
+
+.logo__img {
+  stroke: #fff;
 }
 
 .title {
@@ -67,6 +75,12 @@ a {
   border-radius: 22px;
 }
 
+.header__phone-number:hover,
+.menu__link:hover,
+.gallery__link:hover {
+  color: #adefb8;
+}
+
 .menu {
   width: 100%;
   border-top: 1px solid #fff;
@@ -110,9 +124,21 @@ a {
   margin-bottom: 20px;
 }
 
+.header__btn:hover,
+.booking__btn:hover {
+  color: #adefb8;
+  background-color: #886239b0;
+  box-shadow: inset 2px 2px 20px 12px rgb(0 0 0 / 20%);
+}
+
 .header__arrow {
   text-align: center;
   margin-bottom: 15px;
+  stroke: #fff;
+}
+
+.header__arrow:hover {
+  stroke: #adefb8;
 }
 
 .direction {
@@ -193,6 +219,9 @@ a {
   min-height: 256px;
   line-height: 130%;
 }
+.popular__link:hover {
+  box-shadow: 2px 2px 4px 3px rgba(0, 0, 0, 0.2);
+}
 
 .popular__link:nth-child(3),
 .popular__link:nth-child(6) {
@@ -227,6 +256,7 @@ a {
 .map__title {
   margin-bottom: 46px;
 }
+
 .about {
   padding-bottom: 100px;
 }
@@ -247,6 +277,9 @@ a {
   line-height: 19px;
   color: #c4c4c4;
   text-decoration: underline;
+}
+.about__link:hover {
+  color: #08c15b;
 }
 
 .about__popup {
@@ -296,4 +329,399 @@ a {
 
 .slick-prev {
   right: 60px;
+}
+
+.tour {
+  padding: 100px 0;
+}
+
+.tour__title {
+  margin-bottom: 77px;
+}
+
+.tour__box {
+  column-count: 2;
+  column-gap: 46px;
+  border-bottom: 1px solid #d9d9de;
+  padding-bottom: 50px;
+  margin-bottom: 44px;
+}
+
+.tour__text {
+  margin-bottom: 15px;
+}
+
+.tour__text span {
+  font-weight: 700;
+}
+
+.tour__info {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 70px;
+}
+
+.tour__info-item {
+  font-family: "PT Serif", serif;
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 60px;
+  color: #886239;
+  text-align: center;
+}
+
+.tour__info-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: #1f1e1e;
+  line-height: 25px;
+}
+
+.booking {
+  background: #eaeaea;
+  padding: 75px 0;
+}
+
+.booking__title {
+  margin-bottom: 43px;
+}
+
+.booking__form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.booking__input {
+  width: 256px;
+  height: 44px;
+  border: 1px solid #d9d9de;
+  padding: 11px 14px 12px;
+  margin-bottom: 28px;
+  font-size: 16px;
+}
+
+.booking__input::placeholder,
+.booking__area::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #c4c4c4;
+}
+
+.booking__area {
+  width: 100%;
+  padding: 14px;
+  height: 112px;
+  border: 1px solid #d9d9de;
+  resize: none;
+  margin-bottom: 67px;
+}
+
+.booking__btn {
+  background: #886239;
+  border-radius: 30px;
+  border: none;
+  font-size: 18px;
+  line-height: 21px;
+  color: #fff;
+  padding: 19px 65px 20px;
+  cursor: pointer;
+}
+
+.booking__label {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  line-height: 130%;
+  text-decoration: underline;
+}
+
+.booking__checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  padding-left: 45px;
+}
+
+.booking__checkbox-style {
+  width: 26px;
+  height: 26px;
+  border: 2px solid #c4c4c4;
+  border-radius: 2px;
+  position: absolute;
+  margin-left: -45px;
+}
+
+.booking__checkbox:checked + .booking__checkbox-style::before {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  background-color: #adefb8;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.footer {
+  background: #1f1e1e;
+  padding: 80px 0;
+}
+
+.footer__logo {
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.footer__box {
+  display: flex;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+  line-height: 130%;
+  max-width: 830px;
+  margin: 0 auto;
+}
+
+.footer__info {
+  width: 225px;
+}
+.footer__box-title {
+  margin-bottom: 7px;
+  font-weight: 500;
+  color: #fff;
+}
+.footer__copy {
+  margin-bottom: 3px;
+}
+.footer__link {
+  text-decoration: underline;
+}
+.footer_adress {
+  width: 165px;
+}
+.footer__contacts {
+  width: 210px;
+}
+.footer__mail {
+  display: block;
+}
+.menu__btn {
+  display: none;
+}
+
+@media (max-width: 1140px) {
+  .direction__inner {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+  .direction__img {
+    width: 100%;
+  }
+  .about__inner {
+    grid-gap: 20px;
+    grid-template-columns: 1fr 2fr;
+  }
+  .gallery__item-inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .gallery__item-img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 990px) {
+  .popular__link {
+    min-height: 200px;
+  }
+  .popular__items {
+    grid-gap: 10px;
+  }
+  .tour__info {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px 15px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header__phone span {
+    display: none;
+  }
+  .travel-info__items {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+  }
+  .popular__link:nth-child(3),
+  .popular__link:nth-child(6) {
+    grid-column: auto;
+    grid-row: auto;
+  }
+  .popular__items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .popular__link {
+    min-height: 320px;
+  }
+  .popular,
+  .tour,
+  .booking,
+  .footer {
+    padding: 50px 0;
+  }
+  .map,
+  .about,
+  .gallery {
+    padding-bottom: 50px;
+  }
+  .map__iframe {
+    height: 400px;
+  }
+  .about__title {
+    text-align: center;
+  }
+  .about__inner {
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+  }
+  .about__popup {
+    min-height: 400px;
+  }
+  .tour__title {
+    margin-bottom: 40px;
+  }
+  .tour__box {
+    column-count: 1;
+  }
+  .tour__info {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .booking__input {
+    width: 100%;
+  }
+  .booking__label {
+    margin-top: -192px;
+    margin-left: 50px;
+    width: 100%;
+  }
+  .footer__box {
+    display: block;
+    text-align: center;
+  }
+  .footer__info,
+  .footer__adress {
+    margin: 0 auto 25px;
+  }
+  .footer__contacts {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 560px) {
+  .header__title {
+    font-size: 50px;
+  }
+  .menu__btn {
+    display: inline-block;
+    width: 40px;
+    height: 30px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    right: 10px;
+    top: 107px;
+  }
+  .menu__btn::after,
+  .menu__btn::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    left: 0;
+    height: 2px;
+    background-color: #fff;
+  }
+  .menu__btn::before {
+    top: 0;
+  }
+  .menu__btn::after {
+    bottom: 0;
+  }
+  .menu__btn span {
+    display: block;
+    height: 2px;
+    background-color: #fff;
+  }
+  .menu__list {
+    transform: translateY(-200%);
+    display: block;
+    background-color: #886239;
+    padding: 10px 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transition: all 0.3s;
+  }
+  .menu__list.menu__list--active {
+    transform: translateY(0);
+  }
+  .menu__link {
+    padding: 10px;
+    display: block;
+    text-align: center;
+  }
+  .logo {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .header__phone-number {
+    margin-left: 0;
+  }
+  .menu {
+    border: none;
+  }
+  .direction__inner {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+  }
+  .direction {
+    padding: 50px 0;
+  }
+  .travel-info__items {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+  .title {
+    font-size: 28px;
+  }
+  .popular__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .gallery__item-inner {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .gallery__title {
+    width: 100%;
+    text-align-last: left;
+  }
+  .gallery__top {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 460px) {
+  .direction__inner,
+  .travel-info__items,
+  .tour__info {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 340px) {
+  .about__popup {
+    min-height: 280px;
+  }
 }
